# Directory-Handler

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  scrat.py
directory_handler/: __init__.py
directory_handler/src/: base.py
dirlin/: __init__.py  folder.py  pdf.py  validation.py
dirlin/core/: api.py  document.py  util.py
dirlin/db/: __init__.py  setup.py  utils.py
dirlin/db/queries/: api.py  query.py  quickstart.py
dirlin/pipeline/: __init__.py  data_quality.py  quick_pipeline.py  report.py  types.py
dirlin/pipeline/data_quality/: base_check.py  base_validation.py  check.py  manager.py  report.py
dirlin/pipeline/data_quality/validation/: __init__.py  manager.py
dirlin/src/: base.py
dirlin/src/base/: folder.py  util.py  validation.py
dirlin/src/pipeline/: quick_pipeline.py
dirlin/src/pipeline/data_quality/: check.py  report.py
src/: base.py  video.py
test/: test_base.py  test_pdf.py  test_pipeline.py
test/test_pipelines/: test_pipeline.py  test_pipeline_fixtures.py  test_pipeline_workflow.py
test/test_pipelines/test_validation/: test_manager.py  test_simple_case.py
