[tool.poetry]
name = "Dirlin"
version = "0.4.0"
description = "Handy functions for local files"
authors = ["mendozasho"]
readme = "README.md"

packages = [{include = "dirlin"}]

[tool.poetry.dependencies]
python = "^3.11"
openpyxl = "*"
xlrd = "2.0.1"
pandas = "2.0.2"
chardet = "5.2.0"
numpy = "<2.0.0"
tqdm = "~4.67.1"
pyxlsb = "1.0.10"
pdfplumber = "0.11.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
setuptools = "^80"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
