[project]
name = "Dirlin"
version = "0.4.2"
description = "Handy functions for local files"
authors = [{name = "mendozasho"}]
readme = "README.md"
requires-python = ">=3.11"

packages = [{include = "dirlin"}]

dependencies = [
    "openpyxl",
    "xlrd==2.0.1",
    "pandas==2.0.2",
    "chardet==5.2.0",
    "numpy<2.0.0",
    "tqdm~=4.67.1",
    "pyxlsb==1.0.10",
    "pdfplumber==0.11.6",
    "pypdf==5.6.0"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
setuptools = "^80"

#[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"
